option('encoders',
  type : 'array',
  choices : [
    'none',
    'all',
    'lzma1',
    'lzma2',
    'delta',
    'x86',
    'powerpc',
    'ia64',
    'arm',
    'armthumb',
    'sparc',
  ],
  value : ['all'],
  description : 'Encoders to build'
)

option('decoders',
  type : 'array',
  choices : [
    'none',
    'all',
    'lzma1',
    'lzma2',
    'delta',
    'x86',
    'powerpc',
    'ia64',
    'arm',
    'armthumb',
    'sparc',
  ],
  value : ['all'],
  description : 'Decoders to build'
)

option('match_finders',
  type : 'array',
  choices : [
    'none',
    'all',
    'hc3',
    'hc4',
    'bt2',
    'bt3',
    'bt4',
  ],
  value : ['all'],
  description : 'Match finders to build'
)

option('checks',
  type : 'array',
  choices : [
    'all',
    'crc32',
    'crc64',
    'sha256',
  ],
  value : ['all'],
  description : 'Integrity checks to build'
)

option('assembler',
  type : 'combo',
  choices : [
    'yes',
    'no',
    'x86',
    'x86_64',
  ],
  value : 'yes',
  description : 'Use assembler optimizations if such exist for the architecture'
)

option('tune',
  type : 'combo',
  choices : [
    'speed',
    'size',
  ],
  value : 'speed',
  description : 'Whether to tune for speed or small size'
)

option('sha256',
  type : 'combo',
  choices : [
    'internal',
    'external',
  ],
  value : 'internal',
  description : 'Use SHA-256 code from the operating system'
)

option('threads',
  type : 'combo',
  choices : [
    'yes',
    'no',
    'posix',
    'win95',
    'vista',
  ],
  value : 'yes',
  description : 'Whether threading support is desired'
)

option('assume_ram',
  type : 'integer',
  min : 1,
  max : 0xffffffffffffffff,
  value : 128,
  description : 'If and only if the real amount of RAM cannot be determined, assume this many MiB'
)

option('unaligned_access',
  type : 'feature',
  value : 'auto',
  description : '''Enable if the system supports *fast* unaligned memory access
                   with 16-bit and 32-bit integers. By default, this is enabled
                   only on x86, x86_64, and big endian PowerPC.'''
)

option('unsafe_type_punning',
  type : 'boolean',
  value : false,
  description : '''This introduces strict aliasing violations and may result in broken code.
                   However, this might improve performance in some cases, especially with old
                   compilers (e.g. GCC 3 and early 4.x on x86, GCC < 6 on ARMv6 and ARMv7).'''
)

option('cli',
  type : 'feature',
  value : 'auto',
  description : 'Whether to build CLI tools'
)
