tukinc = include_directories('.')

tuklib_physmem = files('tuklib_physmem.c')
tuklib_cpucores = files('tuklib_cpucores.c')
tuklib_open_stdxxx = files('tuklib_open_stdxxx.c')
tuklib_progname = files('tuklib_progname.c')
tuklib_exit = files('tuklib_exit.c')
tuklib_mbstr = files('tuklib_mbstr_width.c', 'tuklib_mbstr_fw.c')
