install_headers('lzma.h')
install_headers([
    'lzma' / 'base.h',
    'lzma' / 'bcj.h',
    'lzma' / 'block.h',
    'lzma' / 'check.h',
    'lzma' / 'container.h',
    'lzma' / 'delta.h',
    'lzma' / 'filter.h',
    'lzma' / 'hardware.h',
    'lzma' / 'index.h',
    'lzma' / 'index_hash.h',
    'lzma' / 'lzma12.h',
    'lzma' / 'stream_flags.h',
    'lzma' / 'version.h',
    'lzma' / 'vli.h',
  ],
  subdir : 'lzma',
)
